# xp-stats

./: LICENSE  README.md  pyproject.toml
tests/: test_ttest.py
xp_stats/: constants.py  ttest.py
