[tool.poetry]
name = "xp-stats"
version = "0.1.0"
description = "Statistical Library for Online Controlled Experiments"
authors = ["Danil Kazakov"]
license = "MIT"
readme = "README.md"
packages = [{include = "xp_stats"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
scipy = "^1.11.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
